--- a/egs/stylesinger.yaml
+++ b/egs/stylesinger.yaml
@@ -50,6 +50,7 @@ binarization_args:
   with_linear: false
   with_spk_embed: true
   with_spk_id: false
+  with_emotion: true
   with_txt: true
   with_wav: true
   with_word: true
@@ -79,7 +80,6 @@ num_spk: 150
 use_spk_embed: true
 use_spk_id: false
 use_word: true
-use_emotion: true
 emo_size: 256
 use_gt_dur: false
 use_gt_f0: false
